--- a/css/style.css
+++ b/css/style.css
@@ -26,9 +26,9 @@ body{
     padding: 10px;
     display: inline-block;}
 img{
-    height:150px;
-    width: 150px;
-    border-radius: 50px;
+    height:120px;
+    width: 120px;
+    border-radius: 50%;
     margin-left:130px ;
     box-shadow: 2px 2px 2px;
 }
@@ -46,9 +46,11 @@ button:hover{
 background-color:red ;
 
 }
-.text{
+#text{
     color:white;
     text-align: center;
+    font-size: small;
+    margin-top: 15px;
 }
 .telechargement{
     margin-top: 15%;
